syntax = "proto3";

import "google/protobuf/empty.proto";

package cartpb;

service CartAPI {
	rpc Show(ShowRequest) returns (ShowResponse) {}
	rpc Add(AddRequest) returns (google.protobuf.Empty) {}
    rpc Remove(RemoveRequest) returns (google.protobuf.Empty) {}
	rpc Commit(CommitRequest) returns (CommitResponse) {}
}

message Cart {
	string userUUID = 1;
	map<string, int32> cartProducts = 2;
}

message ShowRequest {
	string userUUID = 1;
}

message ShowResponse {
    Cart cart = 1;
}

message AddRequest {
	Cart cart = 1;
}

message RemoveRequest {
	Cart cart = 1;
}

message CommitRequest {
	Cart cart = 1;
	string addressUUID = 2;
	string paymentInfoUUID = 3;
}

message CommitResponse {
	string orderUUID = 1;
}
